20070815
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2007/08/15 08:14:46
     [clientloop.c]
     do NOT fall back to the trused x11 cookie if generation of an untrusted
     cookie fails; from security-alert at sun.com; ok dtucker
   - markus@cvs.openbsd.org 2007/08/15 08:16:49
     [version.h]
     openssh 4.7
   - stevesk@cvs.openbsd.org 2007/08/15 12:13:41
     [ssh_config.5]
     tun device forwarding now honours ExitOnForwardFailure; ok markus@
 - (dtucker) [openbsd-compat/bsd-cray.c] Remove debug from signal handler.
   ok djm@
 - (dtucker) [README contrib/caldera/openssh.spec contrib/redhat/openssh.spec
   contrib/suse/openssh.spec] Crank version.

20070813
 - (dtucker) [session.c] Bug #1339: ensure that pam_setcred() is always
   called with PAM_ESTABLISH_CRED at least once, which resolves a problem
   with pam_dhkeys.  Patch from David Leonard, ok djm@

20070810
 - (dtucker) [auth-pam.c] Use sigdie here too.  ok djm@
 - (dtucker) [configure.ac] Bug #1343: Set DISABLE_FD_PASSING for QNX6. From 
   Matt Kraai, ok djm@ 

20070809
 - (dtucker) [openbsd-compat/port-aix.c] Comment typo.
 - (dtucker) [README.platform] Document the interaction between PermitRootLogin
   and the AIX native login restrictions.
 - (dtucker) [defines.h] Remove _PATH_{CSHELL,SHELLS} which aren't
   used anywhere and are a potential source of warnings.

20070808
 - (djm) OpenBSD CVS Sync
   - ray@cvs.openbsd.org 2007/07/12 05:48:05
     [key.c]
     Delint: remove some unreachable statements, from Bret Lambert.
     OK markus@ and dtucker@.
   - sobrado@cvs.openbsd.org 2007/08/06 19:16:06
     [scp.1 scp.c]
     the ellipsis is not an optional argument; while here, sync the usage
     and synopsis of commands
     lots of good ideas by jmc@
     ok jmc@
   - djm@cvs.openbsd.org 2007/08/07 07:32:53
     [clientloop.c clientloop.h ssh.c]
     bz#1232: ensure that any specified LocalCommand is executed after the